--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ license = "Apache-2.0"
 repository = "https://github.com/jelmer/ridewithgps-rs"
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"], default-features = false }
+chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
 log = "0.4"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_urlencoded = "0.7"
 url = "2.5"
+urlencoding = "2.1"
 
 [dev-dependencies]
 serde_json = "1.0"
